test/types/range/elliot/badRangeLiterals/badHighBoundedRange.good
badHighBoundedRange.chpl:2: error: Bound of '..high' must be an integer.
