test/types/range/elliot/badRangeLiterals/badHighBoundedRange.chpl
// test error message for an illegal high bounded range
var badHighBounded = ..1.0;
